# ctrlx-automation-sdk

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  LICENSE-images  README.md  SECURITY.md  about.html  app_builder_env_changes.html  appdevguide.html  appdevguide_basechecks.html  appdevguide_docker.html  appdevguide_other-technologies.html  appdevguide_reserved-interfaces.html  appdevguide_systemreport.html  build.html  changelog.html  connecting_qemu_vm_ctrlx.html  ctrlx_automation.html  data-exchange.html  datalayer.html  debug-overview.html  debug.html  dotnet.html  extenable-denylist.html  fbs2plc.html  index.html  install-scripts.html  install-sources-from-github.html  licensing.html  localizaction.html  log.html  mkdocs.yml  numopenfilehandles.html  overview.html  package-assets.html  package-manifest.html  (+25 more)
.github/: dependabot.yml
samples-cpp/automation.diagnosis/: CMakeLists.txt  README.md  index.html
samples-cpp/automation.diagnosis/snap/: snapcraft.yaml
samples-cpp/datalayer.client/: CMakeLists.txt  README.md  build-snap-arm64.sh  datalayerclient.cpp  datalayerclient.h  index.html  main.cpp  snapcraft.yaml
samples-cpp/datalayer.client/snap/: snapcraft.yaml
samples-cpp/datalayer.diagnosis/: CMakeLists.txt  LICENSE  README.md  build-snap-arm64.sh  ctrlx_datalayer_helper.h  index.html  main.cpp
samples-cpp/datalayer.diagnosis/snap/: snapcraft.yaml
samples-cpp/datalayer.provider.alldata/: CMakeLists.txt  build-fbs.sh  build-snap-amd64.sh  ctrlx_datalayer_helper.h  index.html  main.cpp  providerNodeAllData.cpp  providerNodeAllData.h
samples-cpp/datalayer.provider.alldata/snap/: snapcraft.yaml
samples-cpp/datalayer.provider.sub/: .gitignore  CMakeLists.txt  README.md  build-debug.sh  build-snap-amd64.sh  build-snap-arm64.sh
samples-cpp/datalayer.provider.sub/include/: ctrlx_datalayer_helper.h
samples-cpp/datalayer.provider.sub/snap/: snapcraft.yaml
samples-cpp/datalayer.provider.sub/src/: CMakeLists.txt
samples-cpp/datalayer.register.node/: .gitignore  CMakeLists.txt  README.md  build-snap-amd64.sh  build-snap-arm64.sh  cmake-apps-command.sh  ctrlx_datalayer_helper.h  index.html  main.cpp  metadata.csv  sampleSchema.fbs  snapcraft.yaml
samples-cpp/datalayer.register.node/snap/: snapcraft.yaml
samples-cpp/datalayer.sharedmemory/: CMakeLists.txt  README.md  build-debug.sh  build-snap-arm64.sh  index.html  main_owner.cpp  main_user.cpp
samples-cpp/datalayer.sharedmemory/snap/: snapcraft.yaml
samples-cpp/diagnostics.logbook/: CMakeLists.txt  README.md  index.html  main.cpp
samples-cpp/diagnostics.logbook/snap/: snapcraft.yaml
samples-cpp/hello.plc/: CMakeLists.txt  README.md  build-snap-amd64.sh  ctrlx_datalayer_helper.h  index.html  main.cpp  snapcraft.yaml
samples-cpp/hello.plc/plc_application/: hello.plc.project  hello_plc_application.export
samples-cpp/hello.plc/snap/: snapcraft.yaml
samples-cpp/hello.world/: .editorconfig  CMakeLists.txt  README.md  build-snap-arm64.sh  index.html  main.cpp  snapcraft.yaml
samples-cpp/hello.world/snap/: snapcraft.yaml
samples-cpp/scheduler.remote/: CMakeLists.txt  README.md  build-snap-amd64.sh  build-snap-arm64.sh
samples-cpp/scheduler.remote/snap/: snapcraft.yaml
samples-cpp/scheduler.remote/src/: CMakeLists.txt  Logger.h  Trace.cpp  Trace.h  app_client.cpp  app_client.h  factory.h  main.cpp
samples-python/appdata/: .gitignore  README.md  build-snap-arm64.sh  index.html  main.py  pyproject.toml  requirements.txt  setup.py
samples-python/appdata/app/: main.py
samples-python/appdata/appdata/: app_data_control.py
samples-python/appdata/snap/: snapcraft.yaml
samples-python/appdata/web/: server.py  token.py
samples-python/appdata/weblocal/: server.py
samples-python/datalayer.calc/: .gitignore  LICENSE  README.md  build-snap-arm64.sh  index.html  main.py  pyproject.toml  requirements.txt  setup.py
samples-python/datalayer.calc/app/: main.py
samples-python/datalayer.calc/calculations/: __init__.py  basic_arithmetic_operations.py  convert.py
samples-python/datalayer.calc/helper/: ctrlx_datalayer_helper.py
samples-python/datalayer.calc/snap/: snapcraft.yaml
samples-python/datalayer.client/: README.md  index.html  main.py  pyproject.toml  requirements.txt  setup.py
samples-python/datalayer.client.browse/: README.md  build-snap-arm64.sh  index.html  install-venv.sh  main.py  pyproject.toml  setup.py
samples-python/datalayer.client.browse/app/: main.py
samples-python/datalayer.client.browse/snap/: snapcraft.yaml
samples-python/datalayer.client.bulk/: README.md  index.html  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
samples-python/datalayer.client.bulk/app/: main.py
samples-python/datalayer.client.bulk/helper/: ctrlx_datalayer_helper.py
samples-python/datalayer.client.bulk/snap/: snapcraft.yaml
samples-python/datalayer.client/app/: call_datalayer_client.py  main.py
samples-python/datalayer.client/datalayerclient/: app.py
samples-python/datalayer.client/helper/: ctrlx_datalayer_helper.py
samples-python/datalayer.client/snap/: snapcraft.yaml
samples-python/datalayer.provider.sub/: README.md  client.py  index.html  provider.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
samples-python/datalayer.provider.sub/app/: client.py  provider.py
samples-python/datalayer.provider.sub/datalayerclient/: app.py
samples-python/datalayer.provider.sub/datalayerprovider/: sub_provider_node.py
samples-python/datalayer.provider.sub/helper/: ctrlx_datalayer_helper.py
samples-python/datalayer.provider.sub/snap/: snapcraft.yaml
samples-python/datalayer.provider.sub/wrapper/: run-client.sh  run-provider.sh
samples-python/datalayer.remote.debug/: README.md  build-snap-amd64.sh  debug.py  debugging.py  index.html  main.py  pyproject.toml  requirements.txt  setup.py
samples-python/logbook/: README.md  index.html  main.py  pyproject.toml  requirements.txt  setup.py
samples-python/webserver/: README.md  index.html  install-venv.sh  main.py  pyproject.toml  requirements.txt  setup.py
(+3546 files in other folders)
