[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-py-appdata"
version = "0.0.1" 
description = "This sample demonstrates how to persist your application data in ctrlX OS"
authors = [
    { name = "Bosch Rexroth AG", email = "github@boschrexroth.com" },
]
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "ctrlx-datalayer<=3.6",
    "ctrlx-fbs",
    "PyJWT"
]

[project.scripts]
app-main = "app.main:main"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = ["app", "app.appdata", "app.weblocal"]

