[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-py-calc"
version = "0.0.1" 
description = "Sample App in Python using ctrlX Data Layer subscriptions"
authors = [
    { name = "Bosch Rexroth AG", email = "github@boschrexroth.com" },
]
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "ctrlx-datalayer<=3.5",
    "ctrlx-fbs"
]

[project.scripts]
app-main = "app.main:main"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = ["app", "app.calculations", "app.helper"]



